files-view: fix crash on enter in search

Pressing enter with no selection while in search makes Nautilus
crash.

The problem is that Nautilus will try to access the first element
of a list that is NULL.

To avoid this, make sure that the list is not NULL.

https://bugzilla.gnome.org/show_bug.cgi?id=777214